[project]
name = "plain.admin"
version = "0.65.1"
description = "Manage your app with a backend interface."
authors = [{name = "Dave Gaeddert", email = "dave.gaeddert@dropseed.dev"}]
license = "BSD-3-Clause"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "plain<1.0.0",
    "plain.auth<1.0.0",
    "plain.htmx<1.0.0",
    "plain.tailwind<1.0.0",
]

[dependency-groups]
dev = [
    "plain.pytest<1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["plain"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
