[project]
name = "plain.ai"
version = "0.1.0"
description = "A unified API for building AI-powered features with multiple LLM providers."
authors = [{name = "Dave Gaeddert", email = "dave.gaeddert@dropseed.dev"}]
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.13"
dependencies = [
    "plain<1.0.0",
    "httpx>=0.27,<1.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40,<1.0"]
openai = ["openai>=1.50,<2.0"]

[tool.hatch.build.targets.wheel]
packages = ["plain"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
