[project]
name = "plain.api"
version = "0.16.3"
description = "Build APIs using class-based views."
authors = [{name = "Dave Gaeddert", email = "dave.gaeddert@dropseed.dev"}]
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.13"
dependencies = [
    "plain<1.0.0",
]

[dependency-groups]
dev = [
    "plain.pytest<1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["plain"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
