[project]
name = "plain.auth"
version = "0.15.0"
description = "User authentication and authorization for Plain."
authors = [{name = "Dave Gaeddert", email = "dave.gaeddert@dropseed.dev"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "plain<1.0.0",
    "plain.models<1.0.0",
    # Technically you can swap out sessions entirely with your own,
    # so long as the request.session exists and has a similar API.
    "plain.sessions<1.0.0",
]

[tool.uv]
dev-dependencies = [
    "plain.pytest<1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["plain"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
