[project]
name = "plain.cache"
packages = [
    { include = "plain" },
]
version = "0.17.0"
description = "Database-backed cache for Plain."
authors = [{name = "Dave Gaeddert", email = "dave.gaeddert@dropseed.dev"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "plain<1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["plain"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
