[project]
name = "plain.cache"
packages = [
    { include = "plain" },
]
version = "0.20.0"
description = "A simple database-backed cache for storing JSON-serializable values with optional expiration."
authors = [{name = "Dave Gaeddert", email = "dave.gaeddert@dropseed.dev"}]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "plain<1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["plain"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
